@@ -25,8 +25,7 @@ Depends:
     lavaan (>= 0.5.11),
     ggplot2,
     lattice,
-    gridExtra,
-    tkrplot
+    gridExtra
 Imports:
     plyr,
     RColorBrewer,
